[B]1.3.0[/B]
- Touch mode updates

[B]1.3.0[/B]
- Isengard and Jarvis changes
- Repaired musicvideo list view
- Todo: DSP manager has not been tested
- Code cleanup
- Added MusicVideos to home menuitem
- Rewrote skin settings and submenus

[B]1.2.2[/B]
- More small fixes
- Media info view integrated to List view

[B]1.2.1[/B]
- Small fixes
- Option for single background in home or all around
- Home weather info

[B]1.2[/B]
- Helix Changes
- Better EPG
- Touch Mode

[B]1.1.10[/B]
- TODO: Custom home menu items
- Music now playing widget tweaks
- A Custom item in shutdown menu 
- More skin settings

[B]1.1.9[/B]
- Fixed "Buffering..." text overlap and font size
- Video Extras addon support
- Library Editor addon support
- Removed default recently added widget from home screen (it wasn't updated for a while and skin widgets is force-installed after all) - Only via skin widgets addon from now on
- Customizable submenus
- Better skin settings
- More custom menu items for movies and tv shows

[B]1.1.8[/B]
- Small fixes
- New fonts
 
[B]1.1.7[/B]
- Added 3D button to Video OSD
- Readded player controls
- Added skinsetting to hide the player controls
- Global Search addon support

- Studio and record label logos in info screens
- Skinsetting to toggle them
- 3D flagging

[B]1.1.5[/B]
- Most played games widget (Rom Collection Browser)
- New FileBrowser.xml
- Titles in home screen widgets
- Sidebar in settings categories
- Prevent the subtitle flagging from overlapping with label2
- Disable list view if media info is available
- More accurate resolution flaggings in video lists
- Videofullscreen shows codec flagging only when viewing info
- Studio and record label logos (don't yet exactly know what to do with them, but they're included)

[B]1.1.4[/B]
- Small fixes in video info dialog and list view
- Bigger logos in TV Show Next Aired TV Guide

[B]1.1.3[/B]
- Clearlogo in VideoFullscreen
- Artwork Downloader support
- Rest of the Gotham changes
- Small fixes

[B]1.1.2[/B]