@@ -220,14 +220,16 @@
                 <label2>[COLOR=selected]$INFO[Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type)][/COLOR]</label2>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Favourite) | 
                                           IsEmpty(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type))">               Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Addon)</onclick>
+                <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Path,ActivateWindowAndFocus(Favourites,450,1))</onclick>
+                <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Label,Favourites)</onclick>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Favourite)</onclick>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Video Node)">    Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Music Playlist)</onclick>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Video Playlist)">Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Video Node)</onclick>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Addon)">         Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Video Playlist)</onclick>
                 <onclick condition="Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Favourite)">     Skin.SetString($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type,Addon)</onclick>
-                <onclick>Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Path)</onclick>
-                <onclick>Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Label)</onclick>
-                <onclick>Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Icon)</onclick>
+                <onclick condition="!Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Path)</onclick>
+                <onclick condition="!Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Label)</onclick>
+                <onclick condition="!Stringcompare(Skin.String($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Type),Music Playlist)">Skin.Reset($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Icon)</onclick>
                 <visible>Skin.HasSetting($PARAM[menutype]$PARAM[mainmenuitem].$PARAM[number].Enabled)</visible>
                 <visible>!Skin.HasSetting(No$PARAM[mainmenuitem]$PARAM[menutype])</visible>
                 <visible>!Skin.HasSetting(HomeMenuNo$PARAM[mainmenuitem]Button) | [Skin.HasSetting(SideBar$PARAM[mainmenuitem]Button) + Skin.HasSetting(SidebarShow$PARAM[mainmenuitem]Submenu)]</visible>
@@ -296,15 +298,18 @@
                 <label2>[COLOR=selected]$INFO[Skin.String(MainMenu$PARAM[name].$PARAM[number].Type)][/COLOR]</label2>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Favourite) |
                                                          IsEmpty(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type))">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Addon)</onclick>
+                <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Path,ActivateWindowAndFocus(Favourites,450,1))</onclick>
+                <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Label,Favourites)</onclick>
+                <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].IconType,programs)</onclick>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Favourite)</onclick>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Video Node)">    Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Music Playlist)</onclick>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Video Playlist)">Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Video Node)</onclick>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Addon)">         Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Video Playlist)</onclick>
                 <onclick condition="Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Favourite)">     Skin.SetString(MainMenu$PARAM[name].$PARAM[number].Type,Addon)</onclick>
-                <onclick>Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Path)</onclick>
-                <onclick>Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Label)</onclick>
-                <onclick>Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Icon)</onclick>
-                <onclick>Skin.Reset(MainMenu$PARAM[name].$PARAM[number].IconType)</onclick>
+                <onclick condition="!Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Path)</onclick>
+                <onclick condition="!Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Label)</onclick>
+                <onclick condition="!Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.Reset(MainMenu$PARAM[name].$PARAM[number].Icon)</onclick>
+                <onclick condition="!Stringcompare(Skin.String(MainMenu$PARAM[name].$PARAM[number].Type),Music Playlist)">Skin.Reset(MainMenu$PARAM[name].$PARAM[number].IconType)</onclick>
                 <visible>!Skin.HasSetting(HomeMenuNo$PARAM[name].$PARAM[number]Button)</visible>
             </control>
             <control type="button" id="$PARAM[id3]">
