@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence.stripped"
-  version="1.3.0"
+  version="1.3.1"
   name="Confluence Stripped"
   provider-name="Jezz_X, Team XBMC, Arzk">
   <requires>
