@@ -1,4 +1,6 @@
-[B]1.3.0[/B]
+[B]1.3.1[/B]
+- Favourites opened, if custom item type favourite and path empty
+- Fixed system custom submenu items
 - Touch mode updates
 
 [B]1.3.0[/B]
